process state
